fix choppy scroll with overflow hidden

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -184,7 +184,9 @@ input[type="submit"] {
   left: 0;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  @media screen and (min-width: $midwidth) {
+    overflow-x: hidden;
+  }
 }
 
 #page-body-wrap .our-work a {
